# 3d-object-detection

./: .gitignore  LICENSE  README.md  package.json
cam_lidar_fusion/: CMakeLists.txt  package.xml
cam_lidar_fusion/config/: cloud_cluster.yaml  cluster.rviz  image_lidar.yaml  jtcx.yaml  rviz.rviz  simulation.yaml
cam_lidar_fusion/include/: cloud_cluster.h  ground_filter.h  lshaped_fitting.h  vis_bbox.h
cam_lidar_fusion/launch/: cluster.launch  fusion.launch  ground_filter.launch  test.launch
cam_lidar_fusion/src/: cloud_cluster.cpp  ground_filter.cpp  image_shower.cpp  lshaped_fitting.cpp  vis_bbox.cpp
cam_lidar_fusion/utils/: image_publisher.cpp  lidar_publisher.cpp
colored_pointcloud/: CMakeLists.txt
colored_pointcloud/config/: calib_result.yaml
colored_pointcloud/launch/: colored_pointcloud_node.launch
colored_pointcloud/rviz/: colored_pointcloud161.rviz
colored_pointcloud/src/: colored_pointcloud_node161.cpp
gazebo_plugin/: CMakeLists.txt  package.xml
gazebo_plugin/include/: GetBBox.hh  MovingObj.hh
gazebo_plugin/launch/: environment.launch
gazebo_plugin/msg/: bbox.msg
gazebo_plugin/src/: GetBBox.cc  MovingObj.cc  test_detection.cpp
gazebo_plugin/srv/: bboxPerFrame.srv
gazebo_plugin/worlds/: movingCar.world  test_detection.world
resource/: calibration.json
yolo_ros/: CMakeLists.txt  package.xml
yolo_ros/config/: config.yaml
yolo_ros/launch/: demo.launch
yolo_ros/msg/: BoundingBox.msg  BoundingBoxes.msg  ObjectCount.msg
yolo_ros/scripts/: yolo_bridge.py  yolo_bridge_srv.py  yolo_node.py  yolo_node_srv.py
yolo_ros/srv/: yolo_srv.srv
